@@ -53,6 +53,13 @@ endif
 
 SYS_COMPAT += i386_rhel3 i386_linux24
 
+OPENAFS_VERSION = $(shell dpkg-query --showformat='$${Version}' --show openafs-client)
+MAX_SYSNAMES_PLUS_ONE = $(if $(shell dpkg --compare-versions $(OPENAFS_VERSION) '>=' '1.4.12+dfsg-3' && echo y),33,17)
+
+ifneq ($(word $(MAX_SYSNAMES_PLUS_ONE),$(SYS_COMPAT)),)
+    $(error Too many sysnames: $(SYSNAME_COMPAT))
+endif
+
 ATHENA_SYS = $(word 1, $(SYS_COMPAT))
 ATHENA_SYS_COMPAT = $(patsubst %:,%,$(subst : ,:,$(patsubst %,%:,$(wordlist 2, $(words $(SYS_COMPAT)), $(SYS_COMPAT)))))
 
